@@ -1,3 +1,7 @@
+2006-03-22  Kristian Høgsberg  <krh@redhat.com>
+
+	* GL/glx/glxdri.c (__glXDRIscreenProbe): Improve error logging.
+
 Wed Mar 22 16:28:46 2006  Søren Sandmann  <sandmann@redhat.com>
 
 	* fb/fbmmx.c (fbCopyAreammx): Use inline assembly for copy area,
